--- a/alx-react-app-props/src/index.css
+++ b/alx-react-app-props/src/index.css
@@ -47,11 +47,11 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  background-color: #000000;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 0;
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
