--- a/my-company/src/index.css
+++ b/my-company/src/index.css
@@ -15,7 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
@@ -24,11 +24,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+ width: 100%;
+ height: 100vh;
+ 
 }
+
 
 h1 {
   font-size: 3.2em;
