--- a/my-company/src/index.css
+++ b/my-company/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #000000;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,14 +19,45 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 body {
   margin: 0;
+  padding: 0;
  width: 100%;
  height: 100vh;
  
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  padding: 20px;
+  justify-content: center;
+
+  background-color:#00567B;
+}
+
+.form{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+input, textarea{
+  padding: 12px;
+  background-color: #ffffff;
+  border:none;
+}
+
+textarea{
+  min-height: 100px;
 }
 
 
@@ -42,12 +73,13 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #003B4C;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #d0f5ff;
+  color: #00567B;
 }
 button:focus,
 button:focus-visible {
