--- a/my-company/src/index.css
+++ b/my-company/src/index.css
@@ -30,6 +30,15 @@ body {
  
 }
 
+.form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+}
+
 form{
   display: flex;
   flex-direction: column;
@@ -37,17 +46,9 @@ form{
   background-color: #f9f9f9;
   border-radius: 10px;
   padding: 20px;
-  justify-content: center;
+  
 
   background-color:#00567B;
-}
-
-.form{
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  
 }
 
 input, textarea{
