Changed the background color of the navbar

--- a/my-company/src/App.css
+++ b/my-company/src/App.css
@@ -1,9 +1,13 @@
 #root {
-  
   text-align: center;
 }
 
 li{
   color: #ffffff;
   text-decoration: none;
+}
+
+
+.services li{
+  color: #000000;
 }
