--- a/my-company/src/index.css
+++ b/my-company/src/index.css
@@ -65,7 +65,12 @@ textarea{
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #383838;
 }
+
+
+
+
 
 button {
   border-radius: 8px;
@@ -99,3 +104,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
